force-app/main/default/objects/FEC_MDM_Sub_Code__c/FEC_MDM_Sub_Code__c.object-meta.xml
<CustomObject>
    <label>FEC_MDM_Sub_Code__c</label>
    <nameField>
        <label>FEC_MDM_Sub_Code__c</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FEC_MDM_Sub_Codes__c</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>