force-app/main/default/objects/FEC_MDM_Sub_Code__c/fields/FEC_Name_VN__c.field-meta.xml
<CustomField>
    <fullName>FEC_Name_VN__c</fullName>
    <label>FEC_Name VN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>